# Hackathon

./: LICENSE
Hackathon/: main.py  pyproject.toml  scm_report.csv
Hackathon/Agent/: agent.py
Hackathon/Db/: product.py
Hackathon/db_schema/: demand.py  inventory.py  pricing.py  product.py  sale.py  store.py  supplier.py  warehouse.py
Hackathon/scm_tool/core/: engine.py  forecast.py  inventory.py  supplier.py
Hackathon/scm_tool/schemas/: models.py
Hackathon/scm_tool/tools/: scm_tools.py
