[project]
name = "bakery"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fpdf>=1.7.2",
    "loadenv",
    "mysql>=0.0.3",
    "pandas>=3.0.1",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "pydantic-ai>=1.63.0",
    "pydantic-ai-slim[groq]>=1.63.0",
    "sqlalchemy>=2.0.46",
]
